--- a/index.html
+++ b/index.html
@@ -9,6 +9,11 @@
 </head>
 <body>
     <h1>Personagens da Marvel</h1>
+    
+    <div class="search-bar">
+        <input type="text" id="searchInput" placeholder="Pesquise um personagem..." />
+        <button id="searchButton">Buscar</button>
+    </div>
 
     <div id="herois" class="hero-container"></div>
 
